turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:5: error: value =+ is not a member of Int
				i=+1
                                 ^